app/blog/[slug]/index.module.scss
@use '@scss/common' as *;

.pageType {
  margin-top: calc(var(--base) * 2);

  @include large-break {
    margin-top: calc(var(--base));
  }
}
  
.title {
  @include h2;
  margin: 0 !important;

  @include large-break {
    @include h3;
    margin: 0 !important;
  }
}

.blogHeader {
  margin-top: calc(var(--base) * 2);
  margin-bottom: calc(var(--base) * 3);

  @include mid-break {
    margin-top: calc(var(--base) * 1);
    margin-bottom: calc(var(--base) * 1.5);
  }
}

.mediaGutter {
  margin-bottom: calc(var(--base) * 4);
  margin-left: calc(var(--gutter-h) / -2);
  margin-right: calc(var(--gutter-h) / -2);
  
  @include mid-break {
    margin-bottom: calc(var(--base) * 2);
  }
}

.authorTimeSlots {
  @include mid-break {
    margin-top: var(--base);
  }
}

.authorSlot {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: var(--base) 0;
  border-top: 1px solid var(--theme-text);

  p {
    margin: 0;
    line-height: 1;
  }

  @include mid-break {
    padding: calc(var(--base) * .5) 0;
  }
}

.authorImage {
  width: 32px;
  height: 32px;
  border-radius: 100%;
  overflow: hidden;
  margin-left: var(--base);
}

.dateSlot {
  border-top: 1px solid var(--theme-text);
  padding: calc(var(--base) * 1.25) 0 0;
  display: flex;
  justify-content: space-between;
  align-items: center;

  svg {
    margin-left: var(--base);
  }

  @include mid-break {
    padding: calc(var(--base) * .5) 0 0;
  }
}

.excerpt {
  margin-bottom: calc(var(--base) * 2);
}

